[package]
name = "l-blockchain"
version = "0.1.0"
authors = ["Xavier Lau <c.estlavie@icloud.com>"]

[dependencies]
rocket = "*"
rocket_codegen = "*"

rustc-serialize = "*"

serde = "*"
serde_derive = "*"
serde_json = "*"

sha2 = "*"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
