[package]
name = "l-blockchain"
version = "0.1.0"
authors = ["Xavier Lau <c.estlavie@icloud.com>"]

[dependencies]
rocket = "*"
rocket_codegen = "*"
rocket_contrib = { version = "*", default-features = false, features = ["json"] }

rustc-serialize = "*"

serde = "*"
serde_derive = "*"
serde_json = "*"

sha2 = "*"

uuid = { version = "*", features = ["v4"] }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false
